src/test/deca/context/valid/Objet/Cast-Down-Assign.deca
// Description:
//      Casting down with assignement to upper
//
// Results:
//      nothing
//
// History:
//      created on 17/1/2022

class A {
    protected int x;
    void foo() {
    }
}

class B extends A{
    boolean y;
}

{
    A a = new A();
    A b = (B) (a);
}
